I have implemented The Email Verfication, first youe should do npm install maildev and then start the maildev by typing maildev then run the program send a registration request, open localhost:1080 on the web and activate the email